# felt-python

./: .gitignore  README.md  pyproject.toml  testing.ipynb  testing_comments_duplicate.ipynb  testing_elements.ipynb  testing_layer_groups.ipynb  testing_layers.ipynb  testing_library_user.ipynb  testing_maps.ipynb  testing_projects.ipynb  testing_sources.ipynb
.github/workflows/: lint.yml  lint_type_check.yml  tests.yml  type_checking.yml
docs/: elements.ipynb  layer_groups.ipynb  layers.ipynb  library.ipynb  maps.ipynb  projects.ipynb  sources.ipynb
docs/fixtures/: null-island-points-sample.geojson  null-island-polygons-wkt.csv
felt_python/: __init__.py  api.py  comments.py  elements.py  exceptions.py  layer_groups.py  layers.py  library.py  maps.py  projects.py  sources.py  user.py  util.py
notebooks/: elements.ipynb  layer_groups.ipynb  library.ipynb  maps.ipynb  projects.ipynb  sources.ipynb
tests/: delete_test.py  elements_test.py  layer_groups_test.py  layers_test.py  library_test.py  maps_test.py  projects_test.py  sources_test.py  tests.py
tests/fixtures/: null-island-points.geojson
