[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "felt-python"
version = "0.0.4"
authors = [
  { name="Ãlvaro Arredondo", email="alvaro@felt.com" },
  { name="Chris Loer", email="chris@felt.com" },
]
description = "The official Felt API client library"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/felt/felt-python"
Issues = "https://github.com/felt/felt-python/issues"
Documentation = "https://developers.felt.com"
